Added new JAva and Android Programs

--- a/index.html
+++ b/index.html
@@ -1036,6 +1036,25 @@
 	    									<a target="_blank" href="https://github.com/kiiiiNNNNNNNNNyyyy/Android/tree/master/EggTimer"><button type="button" class="btn btn-default"><i class="fa fa-github"></i> View</button></a>
     									</div>
     								</div>
+    								<div class="col-lg-12">
+    									<div class="col-lg-4 ">
+	    									<h2>Brain Teaser App</h2>
+	    									<hr class="star-primary">
+	    									<img src="img/projects/AndroidBrainTrainer.png" class="img-responsive img-centered" alt="">
+	    									<p style="text-align: justify;">AA Brain Teaser app which requires you do calculationas fast as you can. The application consist of a 30 secods timer in which you have answer as much calculation questions as you can. The application also keeps track of your score.</p>
+	    									<ul class="list-inline item-details">
+	    										<li>Tags:
+	    											<strong>Android, Brain-Teaser, Android Development
+	    											</strong>
+	    										</li>
+	    										<li>Date:
+	    											<strong>January 2017</a>
+	    											</strong>
+	    										</li>
+	    									</ul>
+	    									<a target="_blank" href="https://github.com/kiiiiNNNNNNNNNyyyy/Android/tree/master/BrainTrainer"><button type="button" class="btn btn-default"><i class="fa fa-github"></i> View</button></a>
+    									</div>
+    								</div>
     							</div>
     						</div>
     					</div>
@@ -1111,7 +1130,7 @@
     								</div>
     								<div class="col-lg-12">
     									<div class="col-lg-4">	    									
-    										<h2>Database Query Runner</h2>
+    										<h2>Query Runner</h2>
 	    									<hr class="star-primary">
 	    									<img src="img/projects/JavaDatabase.png" class="img-responsive img-centered" alt="">
 	    									<p style="text-align: justify;">An application which to connects to a remote database. Once you have entered the correct database credentials, the application connects you to the database and allows you to write and run database queries. The app also return query errors.</p>
@@ -1126,6 +1145,23 @@
 	    										</li>
 	    									</ul>
 	    									<a target="_blank" href="https://github.com/kiiiiNNNNNNNNNyyyy/Java/tree/master/Database"><button type="button" class="btn btn-default" ><i class="fa fa-github"></i>View</button></a>
+    									</div>
+    									<div class="col-lg-4">	    									
+    										<h2>Text Editor</h2>
+	    									<hr class="star-primary">
+	    									<img src="img/projects/JavaTextEditor.png" class="img-responsive img-centered" alt="">
+	    									<p style="text-align: justify;">A text editor written in java which allows you to write new files or edit existing text files. The application also consists of a login portal so your documents are password protected. You need to register or login to make or edit files.</p>
+	    									<ul class="list-inline item-details">
+	    										<li>Date:
+	    											<strong>January 2017</a>
+	    											</strong>
+	    										</li>
+	    										<li>Tags:
+	    											<strong>Java, Text-Editor, Authentication</a>
+	    											</strong>
+	    										</li>
+	    									</ul>
+	    									<a target="_blank" href="https://github.com/kiiiiNNNNNNNNNyyyy/Java/tree/master/Text%20Editor"><button type="button" class="btn btn-default" ><i class="fa fa-github"></i>View</button></a>
     									</div>
     								</div>
     							</div>
