Added a new Skill

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
     				</div>
     				<div class="col-lg-3 col-lg-offset-1">
     					<h4>Internet Technologies</h4>
-    					<p>HTML5, CSS3, Javascript (Node, AngularJs, React).</p>
+    					<p>HTML5, CSS3, Javascript (Node, AngularJs, React), Django</p>
     				</div>
     			</div>
     		</div>
