--- a/index.html
+++ b/index.html
@@ -495,28 +495,28 @@
     					<form name="sentMessage" id="contactForm" novalidate>
     						<div class="row control-group">
     							<div class="form-group col-xs-12 floating-label-form-group controls">
-    								<label>Name</label>
+    								<label>Name:</label>
     								<input type="text" class="form-control" placeholder="Name" id="name" name="name" required data-validation-required-message="Please enter your name.">
     								<p class="help-block text-danger"></p>
     							</div>
     						</div>
     						<div class="row control-group">
     							<div class="form-group col-xs-12 floating-label-form-group controls">
-    								<label>Email Address</label>
+    								<label>Email Address: </label>
     								<input type="email" class="form-control" placeholder="Email Address" name = "email" id="email" required data-validation-required-message="Please enter your email address.">
     								<p class="help-block text-danger"></p>
     							</div>
     						</div>
     						<div class="row control-group">
     							<div class="form-group col-xs-12 floating-label-form-group controls">
-    								<label>Phone</label>
+    								<label>Phone: </label>
     								<input type="number" class="form-control" placeholder="Phone Number" name = "phone" id="phone" required data-validation-required-message="Please enter your phone number.">
     								<p class="help-block text-danger"></p>
     							</div>
     						</div>
     						<div class="row control-group">
     							<div class="form-group col-xs-12 floating-label-form-group controls">
-    								<label>Message</label>
+    								<label>Message: </label>
     								<textarea rows="5" class="form-control" placeholder="Message" id="message" name="message" required data-validation-required-message="Please enter a message."></textarea>
     								<p class="help-block text-danger"></p>
     							</div>
