Added a new guess the celebritty app - Android

--- a/index.html
+++ b/index.html
@@ -1041,7 +1041,7 @@
 	    									<h2>Brain Teaser App</h2>
 	    									<hr class="star-primary">
 	    									<img src="img/projects/AndroidBrainTrainer.png" class="img-responsive img-centered" alt="">
-	    									<p style="text-align: justify;">AA Brain Teaser app which requires you do calculationas fast as you can. The application consist of a 30 secods timer in which you have answer as much calculation questions as you can. The application also keeps track of your score.</p>
+	    									<p style="text-align: justify;">A Brain Teaser app which requires you do calculationas fast as you can. The application consist of a 30 secods timer in which you have answer as much calculation questions as you can. The application also keeps track of your score.</p>
 	    									<ul class="list-inline item-details">
 	    										<li>Tags:
 	    											<strong>Android, Brain-Teaser, Android Development
@@ -1053,6 +1053,23 @@
 	    										</li>
 	    									</ul>
 	    									<a target="_blank" href="https://github.com/kiiiiNNNNNNNNNyyyy/Android/tree/master/BrainTrainer"><button type="button" class="btn btn-default"><i class="fa fa-github"></i> View</button></a>
+    									</div>
+    									<div class="col-lg-4 ">
+	    									<h2>Guess The Celebrity App/h2>
+	    									<hr class="star-primary">
+	    									<img src="img/projects/AndroidGuessTheCelebrity.png" class="img-responsive img-centered" alt="">
+	    									<p style="text-align: justify;">An Application in which you have to guess the name of the Celebrity shown. The app allows you to select only one option out of four. The app also displays the correct answer, if your answer is wrong. The app extracts the images from a website/</p>
+	    									<ul class="list-inline item-details">
+	    										<li>Tags:
+	    											<strong>Android, Guess the Celebrity, Android Development
+	    											</strong>
+	    										</li>
+	    										<li>Date:
+	    											<strong>January 2017</a>
+	    											</strong>
+	    										</li>
+	    									</ul>
+	    									<a target="_blank" href="https://github.com/kiiiiNNNNNNNNNyyyy/Android/tree/master/GuesstheCelebrity"><button type="button" class="btn btn-default"><i class="fa fa-github"></i> View</button></a>
     									</div>
     								</div>
     							</div>
