Added a new Android Project

--- a/index.html
+++ b/index.html
@@ -1071,6 +1071,23 @@
 	    									</ul>
 	    									<a target="_blank" href="https://github.com/kiiiiNNNNNNNNNyyyy/Android/tree/master/GuesstheCelebrity"><button type="button" class="btn btn-default"><i class="fa fa-github"></i> View</button></a>
     									</div>
+    									<div class="col-lg-4 ">
+	    									<h2>What's the Weather</h2>
+	    									<hr class="star-primary">
+	    									<img src="img/projects/AndroidWeather.png" class="img-responsive img-centered" alt="">
+	    									<p style="text-align: justify;">A Weather Application which shows you the Tempereture, Humidity, Wind Speed and other weather details of the city you enter. The Data is extracted from openweathermap.org API in JSON form. The app can be used for almost every city in the world.</p>
+	    									<ul class="list-inline item-details">
+	    										<li>Tags:
+	    											<strong>Android, Weather, JSON Data
+	    											</strong>
+	    										</li>
+	    										<li>Date:
+	    											<strong>January 2017</a>
+	    											</strong>
+	    										</li>
+	    									</ul>
+	    									<a target="_blank" href="https://github.com/kiiiiNNNNNNNNNyyyy/Android/tree/master/Weather"><button type="button" class="btn btn-default"><i class="fa fa-github"></i> View</button></a>
+    									</div>
     								</div>
     							</div>
     						</div>
