Added a new android project

--- a/index.html
+++ b/index.html
@@ -985,6 +985,76 @@
     							<div class="modal-body">
     								<div class="col-lg-12">
     									<div class="col-lg-4 ">
+	    									<h2>Where Are You?</h2>
+	    									<hr class="star-primary">
+	    									<img src="img/projects/AndroidLocation.png" class="img-responsive img-centered" alt="">
+	    									<p style="text-align: justify;">An which tells you your precise location, so you never get lost. The apps gets your location using the GPS in your phone. The app also provides you with some other details like Altitude, Bearing and Most importantly, the address of the location.</p>
+	    									<ul class="list-inline item-details">
+	    										<li>Tags:
+	    											<strong>Android, Location, Android Development
+	    											</strong>
+	    										</li>
+	    										<li>Date:
+	    											<strong>January 2017</a>
+	    											</strong>
+	    										</li>
+	    									</ul>
+	    									<a target="_blank" href="https://github.com/kiiiiNNNNNNNNNyyyy/Android/tree/master/WhereareYou"><button type="button" class="btn btn-default"><i class="fa fa-github"></i> View</button></a>
+    									</div>
+    									<div class="col-lg-4 ">
+	    									<h2>Brain Teaser App</h2>
+	    									<hr class="star-primary">
+	    									<img src="img/projects/AndroidBrainTrainer.png" class="img-responsive img-centered" alt="">
+	    									<p style="text-align: justify;">A Brain Teaser app which requires you do calculationas fast as you can. The application consist of a 30 secods timer in which you have answer as much calculation questions as you can. The application also keeps track of your score.</p>
+	    									<ul class="list-inline item-details">
+	    										<li>Tags:
+	    											<strong>Android, Brain-Teaser, Android Development
+	    											</strong>
+	    										</li>
+	    										<li>Date:
+	    											<strong>January 2017</a>
+	    											</strong>
+	    										</li>
+	    									</ul>
+	    									<a target="_blank" href="https://github.com/kiiiiNNNNNNNNNyyyy/Android/tree/master/BrainTrainer"><button type="button" class="btn btn-default"><i class="fa fa-github"></i> View</button></a>
+    									</div>
+    									<div class="col-lg-4 ">
+	    									<h2>What's the Weather</h2>
+	    									<hr class="star-primary">
+	    									<img src="img/projects/AndroidWeatherApp.png" class="img-responsive img-centered" alt="">
+	    									<p style="text-align: justify;">A Weather Application which shows you the Tempereture, Humidity, Wind Speed and other weather details of the city you enter. The Data is extracted from openweathermap.org API in JSON form. The app can be used for almost every city in the world.</p>
+	    									<ul class="list-inline item-details">
+	    										<li>Tags:
+	    											<strong>Android, Weather, JSON Data
+	    											</strong>
+	    										</li>
+	    										<li>Date:
+	    											<strong>January 2017</a>
+	    											</strong>
+	    										</li>
+	    									</ul>
+	    									<a target="_blank" href="https://github.com/kiiiiNNNNNNNNNyyyy/Android/tree/master/Weather"><button type="button" class="btn btn-default"><i class="fa fa-github"></i>View</button></a>
+    									</div>
+    								</div>
+    								<div class="col-lg-12">
+    									<div class="col-lg-4 ">
+	    									<h2>Guess The Celebrity App/h2>
+	    									<hr class="star-primary">
+	    									<img src="img/projects/AndroidGuessTheCelebrity.png" class="img-responsive img-centered" alt="">
+	    									<p style="text-align: justify;">An Application in which you have to guess the name of the Celebrity shown. The app allows you to select only one option out of four. The app also displays the correct answer, if your answer is wrong. The app extracts the images from a website/</p>
+	    									<ul class="list-inline item-details">
+	    										<li>Tags:
+	    											<strong>Android, Guess the Celebrity, Android Development
+	    											</strong>
+	    										</li>
+	    										<li>Date:
+	    											<strong>January 2017</a>
+	    											</strong>
+	    										</li>
+	    									</ul>
+	    									<a target="_blank" href="https://github.com/kiiiiNNNNNNNNNyyyy/Android/tree/master/GuesstheCelebrity"><button type="button" class="btn btn-default"><i class="fa fa-github"></i> View</button></a>
+    									</div>
+    									<div class="col-lg-4 ">
 	    									<h2>Tic-Tac-Toe Game</h2>
 	    									<hr class="star-primary">
 	    									<img src="img/projects/TicTacToeAndroid.png" class="img-responsive img-centered" alt="">
@@ -1018,75 +1088,26 @@
 	    									</ul>
 	    									<a target="_blank" href="https://github.com/kiiiiNNNNNNNNNyyyy/Android/tree/master/PhrasesApp"><button type="button" class="btn btn-default"><i class="fa fa-github"></i> View</button></a>
     									</div>
-    									<div class="col-lg-4 ">
-	    									<h2>Egg Timer App</h2>
-	    									<hr class="star-primary">
-	    									<img src="img/projects/AndroidEggTimer.png" class="img-responsive img-centered" alt="">
-	    									<p style="text-align: justify;">An app which will let you set up a countdown timer with a maximum limit of 10 mins. The app allows you set you a timer for certain minutes and at the end of the timer the app will produce a sound indicating that the timer has finished.</p>
-	    									<ul class="list-inline item-details">
-	    										<li>Tags:
-	    											<strong>Android, Timer, Android Development
-	    											</strong>
-	    										</li>
-	    										<li>Date:
-	    											<strong>January 2017</a>
-	    											</strong>
-	    										</li>
-	    									</ul>
-	    									<a target="_blank" href="https://github.com/kiiiiNNNNNNNNNyyyy/Android/tree/master/EggTimer"><button type="button" class="btn btn-default"><i class="fa fa-github"></i> View</button></a>
-    									</div>
     								</div>
     								<div class="col-lg-12">
-    									<div class="col-lg-4 ">
-	    									<h2>Brain Teaser App</h2>
-	    									<hr class="star-primary">
-	    									<img src="img/projects/AndroidBrainTrainer.png" class="img-responsive img-centered" alt="">
-	    									<p style="text-align: justify;">A Brain Teaser app which requires you do calculationas fast as you can. The application consist of a 30 secods timer in which you have answer as much calculation questions as you can. The application also keeps track of your score.</p>
-	    									<ul class="list-inline item-details">
-	    										<li>Tags:
-	    											<strong>Android, Brain-Teaser, Android Development
-	    											</strong>
-	    										</li>
-	    										<li>Date:
-	    											<strong>January 2017</a>
-	    											</strong>
-	    										</li>
-	    									</ul>
-	    									<a target="_blank" href="https://github.com/kiiiiNNNNNNNNNyyyy/Android/tree/master/BrainTrainer"><button type="button" class="btn btn-default"><i class="fa fa-github"></i> View</button></a>
-    									</div>
-    									<div class="col-lg-4 ">
-	    									<h2>Guess The Celebrity App/h2>
-	    									<hr class="star-primary">
-	    									<img src="img/projects/AndroidGuessTheCelebrity.png" class="img-responsive img-centered" alt="">
-	    									<p style="text-align: justify;">An Application in which you have to guess the name of the Celebrity shown. The app allows you to select only one option out of four. The app also displays the correct answer, if your answer is wrong. The app extracts the images from a website/</p>
-	    									<ul class="list-inline item-details">
-	    										<li>Tags:
-	    											<strong>Android, Guess the Celebrity, Android Development
-	    											</strong>
-	    										</li>
-	    										<li>Date:
-	    											<strong>January 2017</a>
-	    											</strong>
-	    										</li>
-	    									</ul>
-	    									<a target="_blank" href="https://github.com/kiiiiNNNNNNNNNyyyy/Android/tree/master/GuesstheCelebrity"><button type="button" class="btn btn-default"><i class="fa fa-github"></i> View</button></a>
-    									</div>
-    									<div class="col-lg-4 ">
-	    									<h2>What's the Weather</h2>
-	    									<hr class="star-primary">
-	    									<img src="img/projects/AndroidWeatherApp.png" class="img-responsive img-centered" alt="">
-	    									<p style="text-align: justify;">A Weather Application which shows you the Tempereture, Humidity, Wind Speed and other weather details of the city you enter. The Data is extracted from openweathermap.org API in JSON form. The app can be used for almost every city in the world.</p>
-	    									<ul class="list-inline item-details">
-	    										<li>Tags:
-	    											<strong>Android, Weather, JSON Data
-	    											</strong>
-	    										</li>
-	    										<li>Date:
-	    											<strong>January 2017</a>
-	    											</strong>
-	    										</li>
-	    									</ul>
-	    									<a target="_blank" href="https://github.com/kiiiiNNNNNNNNNyyyy/Android/tree/master/Weather"><button type="button" class="btn btn-default"><i class="fa fa-github"></i>View</button></a>
+    									<div class="col-lg-4">
+    										<div class="col-lg-4 ">
+		    									<h2>Egg Timer App</h2>
+		    									<hr class="star-primary">
+		    									<img src="img/projects/AndroidEggTimer.png" class="img-responsive img-centered" alt="">
+		    									<p style="text-align: justify;">An app which will let you set up a countdown timer with a maximum limit of 10 mins. The app allows you set you a timer for certain minutes and at the end of the timer the app will produce a sound indicating that the timer has finished.</p>
+		    									<ul class="list-inline item-details">
+		    										<li>Tags:
+		    											<strong>Android, Timer, Android Development
+		    											</strong>
+		    										</li>
+		    										<li>Date:
+		    											<strong>January 2017</a>
+		    											</strong>
+		    										</li>
+		    									</ul>
+		    									<a target="_blank" href="https://github.com/kiiiiNNNNNNNNNyyyy/Android/tree/master/EggTimer"><button type="button" class="btn btn-default"><i class="fa fa-github"></i> View</button></a>
+    										</div>
     									</div>
     								</div>
     							</div>
