Changer the site

--- a/index.html
+++ b/index.html
@@ -1072,13 +1072,13 @@
 	    									<a target="_blank" href="https://github.com/kiiiiNNNNNNNNNyyyy/Android/tree/master/PhrasesApp"><button type="button" class="btn btn-default"><i class="fa fa-github"></i> View</button></a>
     									</div>
     									<div class="col-lg-4 ">
-	    									<h2>Guess The Celebrity App/h2>
+	    									<h2>Guess The Celebrity</h2>
 	    									<hr class="star-primary">
-	    									<img src="img/projects/AndroidGuessTheCelebrity.png" class="img-responsive img-centered" alt="">
-	    									<p style="text-align: justify;">An Application in which you have to guess the name of the Celebrity shown. The app allows you to select only one option out of four. The app also displays the correct answer, if your answer is wrong. The app extracts the images from a website/</p>
+	    									<img src="img/projects/AndroidGuessTheCelebirty.png" class="img-responsive img-centered" alt="">
+	    									<p style="text-align: justify;">An Application in which you have to guess the name of the Celebrity shown. The app allows you to select only one option out of four. The app also displays the correct answer, if your answer is wrong. The app extracts the images from a website.</p>
 	    									<ul class="list-inline item-details">
 	    										<li>Tags:
-	    											<strong>Android, Guess the Celebrity, Android Development
+	    											<strong>Android, Guessing Game, Android Development
 	    											</strong>
 	    										</li>
 	    										<li>Date:
@@ -1086,28 +1086,27 @@
 	    											</strong>
 	    										</li>
 	    									</ul>
-	    									<a target="_blank" href="https://github.com/kiiiiNNNNNNNNNyyyy/Android/tree/master/GuesstheCelebrity"><button type="button" class="btn btn-default"><i class="fa fa-github"></i> View</button></a>
+	    									<a target="_blank" href="https://github.com/kiiiiNNNNNNNNNyyyy/Android/tree/master/PhrasesApp"><button type="button" class="btn btn-default"><i class="fa fa-github"></i> View</button></a>
     									</div>
     								</div>
     								<div class="col-lg-12">
-    									<div class="col-lg-4">
     										<div class="col-lg-4 ">
 		    									<h2>Egg Timer App</h2>
 		    									<hr class="star-primary">
 		    									<img src="img/projects/AndroidEggTimer.png" class="img-responsive img-centered" alt="">
 		    									<p style="text-align: justify;">An app which will let you set up a countdown timer with a maximum limit of 10 mins. The app allows you set you a timer for certain minutes and at the end of the timer the app will produce a sound indicating that the timer has finished.</p>
 		    									<ul class="list-inline item-details">
-		    										<li>Tags:
-		    											<strong>Android, Timer, Android Development
-		    											</strong>
-		    										</li>
-		    										<li>Date:
-		    											<strong>January 2017</a>
-		    											</strong>
-		    										</li>
-		    									</ul>
-		    									<a target="_blank" href="https://github.com/kiiiiNNNNNNNNNyyyy/Android/tree/master/EggTimer"><button type="button" class="btn btn-default"><i class="fa fa-github"></i> View</button></a>
-    										</div>
+		    									<li>Tags:
+		    										<strong>Android, Timer, Android Development
+		    										</strong>
+		    									</li>
+		    									<li>Date:
+		    										<strong>January 2017</a>
+		    										</strong>
+		    									</li>
+		    								</ul>
+		    								<a target="_blank" href="https://github.com/kiiiiNNNNNNNNNyyyy/Android/tree/master/EggTimer"><button type="button" class="btn btn-default">
+		    								<i class="fa fa-github"></i> View</button></a>
     									</div>
     								</div>
     							</div>
