--- a/index.html
+++ b/index.html
@@ -1097,7 +1097,7 @@
 		    									<p style="text-align: justify;">An app which will let you set up a countdown timer with a maximum limit of 10 mins. The app allows you set you a timer for certain minutes and at the end of the timer the app will produce a sound indicating that the timer has finished.</p>
 		    									<ul class="list-inline item-details">
 		    									<li>Tags:
-		    										<strong>Android, Timer, Android Development
+		    										<strong>Android, CountDown, Android Development
 		    										</strong>
 		    									</li>
 		    									<li>Date:
