--- a/index.html
+++ b/index.html
@@ -1239,22 +1239,22 @@
     						<div class="col-lg-12">
     							<div class="modal-body">
     								<div class="col-lg-12">
-	    								<div class="col-lg-4 ">
-	    									<h2>Python GUI Calculator</h2>
+    									<div class="col-lg-4">
+	    									<h2>Application Downloader </h2>
 	    									<hr class="star-primary">
-	    									<img src="img/projects/PythonCalculator.png" class="img-responsive img-centered" alt="">
-	    									<p style="text-align: justify;">A simple calculator developed in python do basic Calculations like Addition, Subtraction, Multiplication and Division. The ptogram uses the Tkinter Module of the python library to for thr GUI.</p>
+	    									<img src="img/projects/PythonDesktopApplication.png" class="img-responsive img-centered" alt="">
+	    									<p style="text-align: justify;">A Desktop Application which allows you to download application or images from the Internet. The application allows you to enter the link of the file and to select the save location of the file and shows the progress of the download. </p>
 	    									<ul class="list-inline item-details">
 	    										<li>Date:
-	    											<strong><a href="">November 2016</a>
+	    											<strong><a href="">March 2017</a>
 	    											</strong>
 	    										</li>
 	    										<li>Tags:
-	    											<strong><a href="">Python, Calculator, Tkinter</a>
+	    											<strong><a href="">PyQT4, Desktop Application, Downloader</a>
 	    											</strong>
 	    										</li>
 	    									</ul>
-	    									<a href="https://github.com/kiiiiNNNNNNNNNyyyy/Python/blob/master/Project/Calculator.py"><button type="button" class="btn btn-default"><i class="fa fa-github"></i> View</button></a>
+	    									<a href="https://github.com/kiiiiNNNNNNNNNyyyy/Python/blob/master/Beginner's%20Program/Desktop%20Application/Downloader.py"><button type="button" class="btn btn-default"><i class="fa fa-github"></i> View</button></a>
 	    								</div>
 	    								<div class="col-lg-4 ">
 	    									<h2>Python Bounce Game</h2>
@@ -1309,22 +1309,22 @@
 	    									</ul>
 	    									<a href="https://github.com/kiiiiNNNNNNNNNyyyy/Python/tree/master/Project/Web%20Application"><button type="button" class="btn btn-default"><i class="fa fa-github"></i> View</button></a>
 	    								</div>
-	    								<div class="col-lg-4">
-	    									<h2>Downloader - Desktop Application</h2>
+	    								<div class="col-lg-4 ">
+	    									<h2>Python GUI Calculator</h2>
 	    									<hr class="star-primary">
-	    									<img src="img/projects/PythonDesktopApplication.png" class="img-responsive img-centered" alt="">
-	    									<p style="text-align: justify;">A Python Downloader which allows you to download application or images from the Internet. The application allows you to enter the link of the file and to select the save location of the file and shows the progress of the download. </p>
+	    									<img src="img/projects/PythonCalculator.png" class="img-responsive img-centered" alt="">
+	    									<p style="text-align: justify;">A simple calculator developed in python do basic Calculations like Addition, Subtraction, Multiplication and Division. The ptogram uses the Tkinter Module of the python library to for thr GUI.</p>
 	    									<ul class="list-inline item-details">
 	    										<li>Date:
-	    											<strong><a href="">March 2017</a>
+	    											<strong><a href="">November 2016</a>
 	    											</strong>
 	    										</li>
 	    										<li>Tags:
-	    											<strong><a href="">PyQT4, Desktop Application, Downloader</a>
+	    											<strong><a href="">Python, Calculator, Tkinter</a>
 	    											</strong>
 	    										</li>
 	    									</ul>
-	    									<a href="https://github.com/kiiiiNNNNNNNNNyyyy/Python/blob/master/Beginner's%20Program/Desktop%20Application/Downloader.py"><button type="button" class="btn btn-default"><i class="fa fa-github"></i> View</button></a>
+	    									<a href="https://github.com/kiiiiNNNNNNNNNyyyy/Python/blob/master/Project/Calculator.py"><button type="button" class="btn btn-default"><i class="fa fa-github"></i> View</button></a>
 	    								</div>
     								</div>
     							</div>
