Added a new cwerificate

--- a/index.html
+++ b/index.html
@@ -314,6 +314,14 @@
     							<p>October 2016 <a href="#udemy2" data-toggle="modal"><button class="btn btn-sm">View</button></a></p>
     						</div>
     					</div>
+    					<div class="col-lg-12">
+    						<div class="pull-left">
+    							<p><span><i class="fa fa-certificate fa-1" aria-hidden="true"></i></span>&nbsp;Certificate of Completion: Python Desktop Application - Pluralsight</p>
+    						</div>
+    						<div class="pull-right">
+    							<p>March 2017 <a href="#pluralsight1" data-toggle="modal"><button class="btn btn-sm">View</button></a></p>
+    						</div>
+    					</div>
     				</div>
     			</div><br/>
     		</div>
@@ -723,6 +731,29 @@
 	    								<h3 class="text-center">Java Multithreading - Udemy</h3>
 	    								<hr class="star-primary">
 	    								<img src="img/certificates/JavaMultithreading.jpg" class="img-responsive img-centered" alt="Java Multithreading - Udemy">
+	    							</div>
+	    						</div>
+	    					</div>
+	    				</div>
+	    			</div>
+	    		</div>
+    		</div>
+    		<div class="portfolio-modal modal fade" id="pluralsight1" tabindex="-1" role="dialog" aria-hidden="true" style="background-color: #fff;">
+    			<div class="model-content">
+					<div class="close-modal" data-dismiss="modal">
+    					<div class="lr">
+    						<div class="rl">
+    						</div>
+    					</div>
+    				</div>
+	    			<div class="container">
+	    				<div class="row">
+	    					<div class="col-lg-12">
+	    						<div class="model-body">
+	    							<div class="col-lg-12">
+	    								<h3 class="text-center">Python Desktop Application - Pluralsight</h3>
+	    								<hr class="star-primary">
+	    								<img src="img/certificates/pluraslsightPython.jpg" class="img-responsive img-centered" alt="Java Multithreading - Udemy">
 	    							</div>
 	    						</div>
 	    					</div>
