--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
     				<div class="col-lg-12">
     					<div class="container">
     						<div class="pull-right">
-    							<p>* All Projects are avaialble on my <a href="https://github.com/kiiiiNNNNNNNNNyyyy/">Github</a> page.</p>
+    							<p>* All Projects are avaialble on my Github page.</p>
     						</div>
     					</div>
     				</div>
