added new lines

--- a/index.html
+++ b/index.html
@@ -201,12 +201,13 @@
     					</div>
     				</div>
     				<div class="col-lg-12">
-    					<h5>Web Developer Intern, Information Technology</h5><br/>
+    					<h5>Software Developer Intern, Information Technology</h5><br/>
     					<ul>
     						<li><p>Desined and Developed Web Applications Projects using MEAN and LAMP Stack.</p></li>
     						<li><p>Evaluated the SEO of the websites using Google Analytics.</p></li>
     						<li><p>Worked on MySQL and MongoDB Database.</p></li>
     						<li><p>Designed the Database Schema for the web Applications.</p></li>
+                            <li><p>Performed diverse roles in application design including the development and testing of android applications.</p></li>
     					</ul>
     				</div>
     			</div>
