--- a/index.html
+++ b/index.html
@@ -820,6 +820,28 @@
 							<div class="modal-body">
 								<div class="col-lg-12">
 									<div class="col-lg-4">
+										<h3>The Movie Quiz - Arkadium Games</h3>
+										<hr class="star-primary">
+										<img src="img/projects/arkadium-quiz.png" class="img-responsive img-centered" alt="">
+										<p style="text-align: justify;">A movie quiz game based on the programming challenge given by Arkadium games. The gamme uses The Movie Database api. The quiz randomly asks three types of qestions regarding a paricular actor/actress</p>
+										<ul class="list-inline item-details">
+											<li>Tags:
+												<strong>NodeJS, EJS, jQuery, Arkadium</strong>
+											</li>
+											<li>Date:
+												<strong>May 2017</strong>
+											</li>
+											<li>Date:
+												<strong><a href="http://startbootstrap.com">April 2014</a>
+												</strong>
+											</li>
+											<li>Service:
+												<strong>Web Development</strong>
+											</li>
+										</ul>
+										<a target="_blank" href="https://github.com/kiiiiNNNNNNNNNyyyy/arkadium"><button type="button" class="btn btn-default"><i class="fa fa-github"></i>View</button></a>
+									</div>
+									<div class="col-lg-4">
 										<h3>ITM - Interactive Task Manager</h3>
 										<hr class="star-primary">
 										<img src="img/projects/ITM.png" class="img-responsive img-centered" alt="">
