--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
 					</div>
 				</div>
 				<div class="col-lg-12">
-					<h5>Software Developer Intern, Information Technology</h5><br/>
+					<h5>Full Stack Developer Intern, Information Technology</h5><br/>
 					<ul>
 						<li><p>Desined and Developed Web Applications Projects using MEAN and LAMP Stack.</p></li>
 						<li><p>Evaluated the SEO of the websites using Google Analytics.</p></li>
