Added new experience

--- a/index.html
+++ b/index.html
@@ -194,6 +194,24 @@
 			<div class="row">
 				<div class="col-lg-12">	
 					<div class="pull-left">
+						<h4>Arkadium, New York City</h4>
+					</div>
+					<div class="pull-right">
+						<h4 class="text-right">June 2017 - Present</h4>
+					</div>
+				</div>
+				<div class="col-lg-12">
+					<h5>Software Developer Intern, Information Technology</h5><br/>
+					<ul>
+						<li><p>Develop Games using HTML5 and Phaser Game Engine.</p></li>
+						<li><p>Develop factives using Javascript frameworks like InfernoJS and ReactJS</p></li>
+						<li><p>Data Visualization using D3.js</p></li>
+					</ul>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-lg-12">	
+					<div class="pull-left">
 						<h4>OLX-India, Gurgaon</h4>
 					</div>
 					<div class="pull-right">
