--- a/index.html
+++ b/index.html
@@ -203,9 +203,10 @@
 				<div class="col-lg-12">
 					<h5>Software Developer Intern, Information Technology</h5><br/>
 					<ul>
-						<li><p>Develop Games using HTML5 and Phaser Game Engine.</p></li>
-						<li><p>Develop factives using Javascript frameworks like InfernoJS and ReactJS</p></li>
+						<li><p>Developed Games using HTML5 Canvas and Phaser Game Engine.</p></li>
+						<li><p>Develop factives using Javascript frameworks like InfernoJS, ReactJS and VelocityJS</p></li>
 						<li><p>Data Visualization using D3.js</p></li>
+						<li><p>Upgraded existing projects by integrating ES6 Javascript conventions and removing JQuery</p></li>
 					</ul>
 				</div>
 			</div>
