Added multple projects

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 					</div>
 					<div>
 						<a href="https://www.facebook.com/arjun.dass.18" target="_blank"><button type="button" class="btn btn-fb" style="background-color: #3B5998;color: #fff;"><i class="fa fa-facebook left"></i>Facebook</button></a>
-						<a href="https://twitter.com/dontstop_belivn" target="_blank"><button type="button" class="btn btn-tw" style="background-color: #55ACEE;color: #fff;""><i class="fa fa-twitter left"></i> Twitter</button></a>                                                                                               
+						<a href="https://twitter.com/dontstop_belivn" target="_blank"><button type="button" class="btn btn-tw" style="background-color: #55ACEE;color: #fff;"><i class="fa fa-twitter left"></i> Twitter</button></a>                                                                                               
 						<a href="https://plus.google.com/111473305952243220263" target="_blank"><button type="button" class="btn btn-gplus" style="background-color: #DD4B39;color: #fff;"><i class="fa fa-google-plus left"></i> Google +</button></a>
 						<a href="https://www.linkedin.com/in/arjun-dass-3a3434106" target="_blank"><button type="button" class="btn btn-li" style="background-color: #0082CA;color: #fff;"><i class="fa fa-linkedin left"></i> Linkedin</button></a>
 						<a href="https://github.com/kiiiiNNNNNNNNNyyyy" target="_blank"><button type="button" class="btn btn-git" style="background-color: #ccc;color: #fff;"><i class="fa fa-github left"></i> Github</button></a>
@@ -839,6 +839,42 @@
 							<div class="modal-body">
 								<div class="col-lg-12">
 									<div class="col-lg-4">
+										<h3>Socket.io Chat Room</h3>
+										<hr class="star-primary">
+										<img src="img/projects/socketio-app.png" class="img-responsive img-centered" alt="">
+										<p style="text-align: justify;">A Chat room created using Socket.io which allows multiple users to chat in a single chat room and also allows user to create their own chatroom. Other users can join that chat room, just by adding their and chat room name</p>
+										<ul class="list-inline item-details">
+											<li>Tags:
+												<strong>Javascript, Socket.IO, SCSS, Chatroom</strong>
+											</li>
+											<li>Date:
+												<strong>May 2017</strong>
+											</li>
+											<li>Service:
+												<strong>Web Development</strong>
+											</li>
+										</ul>
+										<a target="_blank" href="https://github.com/kinny94/ChatApp"><button type="button" class="btn btn-default"><i class="fa fa-github"></i>View</button></a>
+									</div>
+									<div class="col-lg-4">
+										<h3>ReactJs - Todo Application</h3>
+										<hr class="star-primary">
+										<img src="img/projects/React-Todo-App.png" class="img-responsive img-centered" alt="">
+										<p style="text-align: justify;">A Todo aplpication build using React and SCSS, which allows user to add their todo list and add them. The application also allows users to search for a particular todo and also allows them to cut off a particular todo</p>
+										<ul class="list-inline item-details">
+											<li>Tags:
+												<strong>ReactJS, Webpack, SCSS, LocatStorage</strong>
+											</li>
+											<li>Date:
+												<strong>June 2017</strong>
+											</li>
+											<li>Service:
+												<strong>Web Development</strong>
+											</li>
+										</ul>
+										<a target="_blank" href="https://github.com/kinny94/React-Todo-App"><button type="button" class="btn btn-default"><i class="fa fa-github"></i>View</button></a>
+									</div>
+									<div class="col-lg-4">
 										<h3>The Movie Quiz - Arkadium Games</h3>
 										<hr class="star-primary">
 										<img src="img/projects/arkadium-quiz.png" class="img-responsive img-centered" alt="">
@@ -856,6 +892,8 @@
 										</ul>
 										<a target="_blank" href="https://github.com/kiiiiNNNNNNNNNyyyy/arkadium"><button type="button" class="btn btn-default"><i class="fa fa-github"></i>View</button></a>
 									</div>
+								</div>
+								<div class="col-lg-12">
 									<div class="col-lg-4">
 										<h3>ITM - Interactive Task Manager</h3>
 										<hr class="star-primary">
@@ -892,8 +930,6 @@
 										</ul>
 										<a target="_blank" href="https://github.com/kiiiiNNNNNNNNNyyyy/Web-Programming-Project"><button type="button" class="btn btn-default"><i class="fa fa-github"></i>View</button></a>
 									</div>
-								</div>
-								<div class="col-lg-12">
 									<div class="col-lg-4">
 										<h3>BookCloud (Startup) - Buy-Sell Books online</h3>
 										<hr class="star-primary">
@@ -913,6 +949,8 @@
 										</ul>
 										<a target="_blank" href="https:facebook.com/bookcloud"><button type="button" class="btn btn-default"><i class="fa fa-github"></i>View</button></a>
 									</div>
+								</div>
+								<div class="col-lg-12">
 									<div class="col-lg-4 ">
 										<h3>User Authentication System</h3>
 										<hr class="star-primary">
