--- a/index.html
+++ b/index.html
@@ -203,9 +203,9 @@
 				<div class="col-lg-12">
 					<h5>Software Developer Intern, Information Technology</h5><br/>
 					<ul>
-						<li><p>Developed Games using HTML5 Canvas and Phaser Game Engine.</p></li>
+						<li><p>Developed interactive games using HTML5 Canvas and Phaser Game Engine.</p></li>
 						<li><p>Develop factives using Javascript frameworks like InfernoJS, ReactJS and VelocityJS</p></li>
-						<li><p>Data Visualization using D3.js</p></li>
+						<li><p>Developed a Javascript library for altering files of different extensions.</p></li>
 						<li><p>Upgraded existing projects by integrating ES6 Javascript conventions and removing JQuery</p></li>
 					</ul>
 				</div>
@@ -220,7 +220,7 @@
 					</div>
 				</div>
 				<div class="col-lg-12">
-					<h5>Full Stack Developer Intern, Information Technology</h5><br/>
+					<h5>Software Developer Intern, Information Technology</h5><br/>
 					<ul>
 						<li><p>Desined and Developed Web Applications Projects using MEAN and LAMP Stack.</p></li>
 						<li><p>Evaluated the SEO of the websites using Google Analytics.</p></li>
@@ -241,7 +241,7 @@
 					</div>
 				</div>
 				<div class="col-lg-12">
-					<h5>Back-End Developer Intern, Information Technology</h5><br/>
+					<h5>Full Stack Developer Intern, Information Technology</h5><br/>
 					<ul>
 						<li><p>Designed and Developed front-end of Company’s website using HTML5 and Bootstrap 3.</p></li>
 						<li><p>Maintained the Integration of Front-End and Backend using NodeJS and MongoDB.</p></li>
